fixxed project names overflowing / squishing image

--- a/src/Components/AsideRecent/AsideRecent.css
+++ b/src/Components/AsideRecent/AsideRecent.css
@@ -23,7 +23,9 @@
 }
 
 .aside-recent__project {
-    display: flex;
+    display: grid;
+    grid-template-columns: 4rem 1fr;
+    grid-template-rows: 1fr;
     align-items: center;
     gap: .5rem;
     cursor: pointer;
@@ -42,4 +44,6 @@
 .aside-recent__project-name {
     color: black; 
     font-weight: bold;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
